[WIP] Self scheduling
